Made number 3 in edjudge,rotation, reflection and Sobel filter

--- a/notebooks/Contest1.ipynb
+++ b/notebooks/Contest1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 \n",
+      "5\n",
       "5 5 5 4 4\n",
       "5 4 \n",
       "3\n"
@@ -29,25 +29,24 @@
     "        remained.append(num)\n",
     "    else:\n",
     "        deleted+=1\n",
-    "remained.reverse()\n",
     "for i in range(len(remained)):\n",
-    "    print(remained.pop(),end=' ')\n",
+    "    print(remained[i],end=' ')\n",
     "print()\n",
     "print(deleted)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "12 43 14 156\n",
-      "12 14 43 156 "
+      "3 \n",
+      "1 2 3\n",
+      "1 2 3 "
      ]
     }
    ],
@@ -68,17 +67,41 @@
     "    num_tuple = (getDigitSum(num),num)\n",
     "    num_tuples.append(num_tuple)\n",
     "num_tuples.sort(key = lambda tupl: (tupl[0], tupl[1]))\n",
-    "num_tuples.reverse()\n",
     "for i in range(n):\n",
-    "    print(num_tuples.pop()[1],end=' ')"
+    "    print(num_tuples[i][1],end=' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 9\n",
+      "1 2 1 2 1 2 1 2 1 2 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "inp = input().split(' ')\n",
+    "k = int(inp.pop())\n",
+    "n = int(inp.pop())\n",
+    "res = list()\n",
+    "for i in range(0,n-k+2,1):\n",
+    "    if i%2 == 0:\n",
+    "        res.append(1)\n",
+    "    else:\n",
+    "        res.append(2)\n",
+    "next = 3\n",
+    "for j in range(n-k+2,n,1):\n",
+    "    res.append(next)\n",
+    "    next+=1\n",
+    "for j in range(0,len(res)):\n",
+    "    print(res[j],end=' ')"
+   ]
   }
  ],
  "metadata": {
