--- a/lections/05_advanced_python_part1/functions.ipynb
+++ b/lections/05_advanced_python_part1/functions.ipynb
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,15 +1331,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before: [('Michael', '06.08.62'), ('Vadim', '23.08.89'), ('Nastya', '16.01.97')]\n",
-      "After:  [('Michael', '06.08.62'), ('Vadim', '23.08.89'), ('Nastya', '16.01.97'), ('Nastya', '16.01.97')]\n"
+      "Before: [('Michael', '06.08.62'), ('Vadim', '23.08.89')]\n",
+      "After:  [('Michael', '06.08.62'), ('Vadim', '23.08.89'), ('Nastya', '16.01.97')]\n"
      ]
     }
    ],
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
      "output_type": "stream",
      "text": [
       "Before: ['Nastya', '16.01.97']\n",
-      "After:  ['Anton', '04.11.96']\n"
+      "After:  ['Nastya', '16.01.97']\n"
      ]
     }
    ],
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
        "(5, 6)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1838,10 +1838,10 @@
     {
      "data": {
       "text/plain": [
-       "([],)"
+       "([1, 1],)"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1870,8 +1870,8 @@
      "text": [
       "Before: None\n",
       "==============================\n",
-      "\tBefore: []\n",
-      "\tAfter:  [1]\n",
+      "\tBefore: [1, 1]\n",
+      "\tAfter:  [1, 1, 1]\n",
       "==============================\n",
       "After:  None\n"
      ]
@@ -1889,16 +1889,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],)"
+       "([1, 1, 1],)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
