--- a/lections/05_advanced_python_part1/iterate&generate.ipynb
+++ b/lections/05_advanced_python_part1/iterate&generate.ipynb
@@ -1113,14 +1113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 2 3 4 5 4 3 2 1 0\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
      ]
     }
    ],
@@ -1139,7 +1149,8 @@
     "def complex_gen(a_delta, a_max):\n",
     "    yield from recursive_gen(0, a_delta, a_max)\n",
     "        \n",
-    "print(*complex_gen(1,5))"
+    "for i in complex_gen(1,5):\n",
+    "    print(i)"
    ]
   },
   {
@@ -1151,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1211,7 @@
        "3"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
